setup e2e
