# backend/internal/app/handlers/echo.go
@@ -2,8 +2,10 @@ package handlers
 
 import (
 	"iotdash/backend/pkg/zaplog"
+	"net/http"
 
 	"github.com/labstack/echo/v4"
+	"github.com/labstack/echo/v4/middleware"
 	"go.uber.org/zap"
 )
 
@@ -18,8 +20,15 @@ func NewEcho(log *zap.Logger, handlers []EchoRouteHandler) *echo.Echo {
 	e := echo.New()
 	e.HideBanner = true
 	e.Use(echoLoggerMiddleware)
+	e.Use(middleware.CORSWithConfig(middleware.CORSConfig{
+		AllowOrigins: []string{"*"},
+	}))
 
 	rg := e.Group("/api/v1")
+
+	rg.GET("/healthcheck", func(c echo.Context) error {
+		return c.JSON(http.StatusOK, map[string]string{"status": "healthy"})
+	})
 
 	for _, h := range handlers {
 		h.SetupLogger(log)
